--- a/environment.yml
+++ b/environment.yml
@@ -1,51 +1,8 @@
 name: hacker-news
 channels:
-  - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - blas=1.0=openblas
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2024.12.31=hca03da5_0
-  - deprecated=1.2.13=py312hca03da5_0
-  - expat=2.6.4=h313beb8_0
-  - filelock=3.13.1=py312hca03da5_0
-  - fsspec=2024.12.0=py312hca03da5_0
-  - importlib-metadata=7.0.1=py312hca03da5_0
-  - jinja2=3.1.5=py312hca03da5_0
-  - libabseil=20240116.2=cxx17_h313beb8_0
-  - libcxx=14.0.6=h848a8c0_0
-  - libffi=3.4.4=hca03da5_1
-  - libgfortran=5.0.0=11_3_0_hca03da5_28
-  - libgfortran5=11.3.0=h009349e_28
-  - libopenblas=0.3.21=h269037a_0
-  - libprotobuf=4.25.3=h514c7bf_0
-  - libtorch=2.5.1=gpu_mps_h82d5d13_201
-  - libuv=1.48.0=h80987f9_0
-  - llvm-openmp=14.0.6=hc6e5704_0
-  - markupsafe=2.1.3=py312h80987f9_1
-  - mpmath=1.3.0=py312hca03da5_0
-  - ncurses=6.4=h313beb8_0
-  - networkx=3.4.2=py312hca03da5_0
-  - nomkl=3.0=0
-  - numpy=2.0.1=py312h7f4fdc5_1
-  - numpy-base=2.0.1=py312he047099_1
-  - openssl=3.0.15=h80987f9_0
-  - opentelemetry-api=1.26.0=py312hca03da5_0
-  - pip=25.0=py312hca03da5_0
-  - python=3.12.4=h99e199e_1
-  - pytorch=2.5.1=gpu_mps_py312h80af30b_201
-  - readline=8.2=h1a28f6b_0
-  - setuptools=75.8.0=py312hca03da5_0
-  - sleef=3.5.1=h80987f9_2
-  - sqlite=3.45.3=h80987f9_0
-  - sympy=1.13.3=py312hca03da5_0
-  - tk=8.6.14=h6ba3021_0
-  - typing_extensions=4.12.2=py312hca03da5_0
-  - tzdata=2025a=h04d1e81_0
-  - wheel=0.44.0=py312hca03da5_0
-  - wrapt=1.17.0=py312h80987f9_0
-  - xz=5.4.6=h80987f9_1
-  - zipp=3.21.0=py312hca03da5_0
-  - zlib=1.2.13=h18a0788_1
+  - python=3.12.4
+  - pytorch
 prefix: /opt/anaconda3/envs/hacker-news
