--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,10 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - python=3.12.4
+  - python==3.12.2
   - pytorch
   - tqdm
   - more-itertools
   - requests
+  - wandb
 prefix: /opt/anaconda3/envs/hacker-news
