feat: use .env in Dockerfile for fe

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,5 +7,10 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 3000
+# Define build argument with default value
+ARG FRONTEND_PORT=3000
+# Make it available as env variable
+ENV FRONTEND_PORT=$FRONTEND_PORT
+
+EXPOSE ${FRONTEND_PORT}
 CMD ["npm", "run", "dev"] 
