feat: use BACKEND env variables in be dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+# Define build argument with default value
+ARG BACKEND_PORT=8000
+# Make it available as env variable
+ENV BACKEND_PORT=$BACKEND_PORT
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${BACKEND_PORT}", "--reload"] 
