--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,24 @@
-FROM python:3.9-slim
+FROM continuumio/miniconda3:latest
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy environment file
+COPY environment.yml .
 
+# Create conda environment
+RUN conda env create -f environment.yml
+
+# Make RUN commands use the new environment
+SHELL ["conda", "run", "-n", "myenv", "/bin/bash", "-c"]
+
+# Copy application code
 COPY . .
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+# Set environment variables
+ENV PYTHONPATH=/app
+
+# Expose the port the app runs on
+EXPOSE 8000
+
+# Command to run the application
+CMD ["conda", "run", "-n", "myenv", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
