--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: hacker-news
 channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
+  - conda-forge
 dependencies:
   - python==3.12.2
   - pytorch
